--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root{
+  --primary-color: #E635A1;
+  --secondary-color: #2100F4;
+  --third-color: #F6C2C6;
+  --buttons: #c77;
+  --buttons-hover: #c55
+}
+body {
+  font-family: sans-serif;
+  line-height: 1.6;
+  background-color: #eee;
+  margin: 0;
+  padding: 0;
+}
+.container{
+  width: 1300px;
+}
+.division{
+  width: 1300px;
+}
+.section-division{
+  display: flex;
+  align-items: center;
+}
+.section-division-title{
+  font-size: 16px;
+  font-weight: bold;
+  color: #555;
+  margin-right: 10px;
+}
+.section-division-line{
+  background-color: #999;
+  height: 2px;
+  flex: 1;
+}
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .container{
+  margin-top: 30px;
+}
+
+header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  background-color: #fff;
+  border-bottom: 1px solid #ccc;
+}
+header .container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer{
+  height: 100px;
+  margin-top: 50px;
+  background-color: var(--third-color);
+}
+
+footer .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+
+/*GENERAL PAGE ITEMS*/
+.buyInfoTitle{
+  font-size: 21px;
+  color: #333;
+  font-weight: bold;
 }
