adding admin pages

--- a/src/components/styles/Layout/admin/aside.module.css
+++ b/src/components/styles/Layout/admin/aside.module.css
@@ -1,10 +1,10 @@
 
-aside{
+.aside{
     background-color: #ccc;
     flex: 1;
     height: 100vh;
 }
-aside header{
+.aside header{
     background-color: #ccc;
 }
 
